--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 .idea
+.DS_Store
 *.iml
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
